De csv p/ Python

--- a/Arquivos_Modulos_Pacotes/trabalhando_com_arquivos.ipynb
+++ b/Arquivos_Modulos_Pacotes/trabalhando_com_arquivos.ipynb
@@ -852,12 +852,18 @@
     "### Substituindo finally por with\r\n",
     "\r\n",
     "* with fecha automaticamente um arquivo\r\n",
-    "* usando Lists Comprehensions simples para imprimir linha a linha"
+    "* usando Lists Comprehensions simples para imprimir linha a linha\r\n",
+    "\r\n",
+    "> Utilizamos o comando with para gerenciar o contexto de utilização do arquivo. Além de arquivos, podemos utilizar o with para gerenciar processos que precisam de uma pré e pós condição de execução; por exemplo: abrir e fechar o arquivo, realizar conexão com o banco de dados, sockets, entre outros.\r\n",
+    "\r\n",
+    "> O objeto que está sendo manipulado pelo with precisa implementar dois métodos mágicos: \\_\\_enter__() e \\_\\_exit__().\r\n",
+    "\r\n",
+    "> O método \\_\\_enter__() é executado logo no início da chamada da função e retorna uma representação do objeto que está sendo executada no contexto (ou context guard). Ao final, o método \\_\\_exit__() é invocado, e o contexto da execução, finalizado."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -881,13 +887,79 @@
    "source": [
     "try:\r\n",
     "    with open('contatos.csv', mode='r', encoding='latin_1') as arquivo:\r\n",
-    "        [print(linha, end='') for linha in arquivo.readlines()]\r\n",
+    "        [print(linha, end='') for linha in arquivo]\r\n",
     "\r\n",
     "except FileNotFoundError:\r\n",
     "    print('Arquivo não encontrado')\r\n",
     "    \r\n",
     "except PermissionError:\r\n",
     "    print('Sem permissão de escrita')\r\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# De csv p/ Python\r\n",
+    "\r\n",
+    "* converter um arquivo csv para um objeto list no python\r\n",
+    "* usando modulo csv\r\n",
+    "* criando uma função"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Criando uma class contatos"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Contato():\r\n",
+    "    def __init__(self, id: int, nome: str, email: str):\r\n",
+    "        self.id = id\r\n",
+    "        self.nome = nome\r\n",
+    "        self.email = email"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Criando uma função csv para list python"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import csv\r\n",
+    "\r\n",
+    "def csv_para_contatos(caminho: str, encoding: str = 'Latin_1'):\r\n",
+    "    contatos: list = []\r\n",
+    "    try:\r\n",
+    "        with open(caminho, encoding=encoding) as a:\r\n",
+    "            leitor = csv.reader(a)\r\n",
+    "            for linha in leitor:\r\n",
+    "                id, nome, email = linha # desencapsulando\r\n",
+    "                \r\n",
+    "                contato = Contato(int(id), nome, email)\r\n",
+    "                contatos.append(contato)\r\n",
+    "\r\n",
+    "        return contatos\r\n",
+    "    \r\n",
+    "    except FileNotFoundError:\r\n",
+    "    print('Arquivo não encontrado')\r\n",
+    "    \r\n",
+    "    except PermissionError:\r\n",
+    "        print('Sem permissão de escrita')"
    ]
   }
  ],
