De objeto Python para json

--- a/Arquivos_Modulos_Pacotes/trabalhando_com_arquivos.ipynb
+++ b/Arquivos_Modulos_Pacotes/trabalhando_com_arquivos.ipynb
@@ -916,7 +916,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -924,7 +924,7 @@
     "    def __init__(self, id: int, nome: str, email: str):\r\n",
     "        self.id = id\r\n",
     "        self.nome = nome\r\n",
-    "        self.email = email"
+    "        self.email = email\r\n"
    ]
   },
   {
@@ -936,7 +936,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -956,10 +956,152 @@
     "        return contatos\r\n",
     "    \r\n",
     "    except FileNotFoundError:\r\n",
-    "    print('Arquivo não encontrado')\r\n",
+    "        print('Arquivo não encontrado')\r\n",
     "    \r\n",
     "    except PermissionError:\r\n",
     "        print('Sem permissão de escrita')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Testando com arquivo contatos.csv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 - Guilherme - guilherme@guilherme.com.br\n",
+      "2 - Elias - elias@elias.com.br\n",
+      "3 - Gabriel - gabriel@gabriel.com.br\n",
+      "4 - Anderson - anderson@anderson.com.br\n",
+      "5 - Alex - alex@alex.com.br\n",
+      "6 - Vini - vini@vini.com.br\n",
+      "7 - Letï¿½cia - leticia@leticia.com.br\n",
+      "8 - Giulia - giulia@giulia.com.br\n",
+      "9 - Felipe - felipe@felipe.com.br\n",
+      "10 - Luï¿½sa - luisa@luisa\n",
+      "11 - Livio - livio@livio.com.br\n"
+     ]
+    }
+   ],
+   "source": [
+    "contatos = csv_para_contatos('contatos.csv')\r\n",
+    "\r\n",
+    "lista = [print(f'{contato.id} - {contato.nome} - {contato.email}') for contato in contatos]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# De objeto Python para json\r\n",
+    "\r\n",
+    "* converter um objeto python para um arquivo json\r\n",
+    "* usando modulo json\r\n",
+    "* criando uma função"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Criando uma função objeto python para json"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json\r\n",
+    "\r\n",
+    "# escrita\r\n",
+    "def contatos_para_json(contatos, caminho: str):\r\n",
+    "    try:\r\n",
+    "        with open(caminho, mode='w') as a:\r\n",
+    "            json.dump(contatos, a, default=__contato_para_json)\r\n",
+    "    \r\n",
+    "    except FileNotFoundError:\r\n",
+    "        print('Arquivo não encontrado')\r\n",
+    "    \r\n",
+    "    except PermissionError:\r\n",
+    "        print('Sem permissão de escrita')\r\n",
+    "        \r\n",
+    "def __contato_para_json(contato):\r\n",
+    "    return contato.__dict__\r\n",
+    "\r\n",
+    "# leitura\r\n",
+    "def json_para_contatos(caminho: str):\r\n",
+    "    contatos = []\r\n",
+    "    \r\n",
+    "    try:\r\n",
+    "        with open(caminho, mode='r') as a:\r\n",
+    "            contatos_json = json.load(a)\r\n",
+    "            # Contato(contato['id'], contato['nome'], contato['email']) = Contato(**contato)\r\n",
+    "            #  assim estariamos desempacotando\r\n",
+    "            [contatos.append(Contato(contato['id'], contato['nome'], contato['email']))\r\n",
+    "             for contato in contatos_json]\r\n",
+    "        \r\n",
+    "        return contatos\r\n",
+    "    \r\n",
+    "    except FileNotFoundError:\r\n",
+    "        print('Arquivo não encontrado')\r\n",
+    "    \r\n",
+    "    except PermissionError:\r\n",
+    "        print('Sem permissão de escrita')\r\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Testando de objeto python para json"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 - Guilherme - guilherme@guilherme.com.br\n",
+      "2 - Elias - elias@elias.com.br\n",
+      "3 - Gabriel - gabriel@gabriel.com.br\n",
+      "4 - Anderson - anderson@anderson.com.br\n",
+      "5 - Alex - alex@alex.com.br\n",
+      "6 - Vini - vini@vini.com.br\n",
+      "7 - Letï¿½cia - leticia@leticia.com.br\n",
+      "8 - Giulia - giulia@giulia.com.br\n",
+      "9 - Felipe - felipe@felipe.com.br\n",
+      "10 - Luï¿½sa - luisa@luisa\n",
+      "11 - Livio - livio@livio.com.br\n"
+     ]
+    }
+   ],
+   "source": [
+    "# transformando csv em objeto python\r\n",
+    "contatos = csv_para_contatos('contatos.csv')\r\n",
+    "\r\n",
+    "# transformando objeto python em json\r\n",
+    "contatos_para_json(contatos, 'contatos.json')\r\n",
+    "\r\n",
+    "# transformando json em objeto python\r\n",
+    "contatos = json_para_contatos('contatos.json')\r\n",
+    "\r\n",
+    "lista = [print(f'{contato.id} - {contato.nome} - {contato.email}') for contato in contatos]"
    ]
   }
  ],
