exemplo os.path.isdir

--- a/Built_in_Functions/Built-in.ipynb
+++ b/Built_in_Functions/Built-in.ipynb
@@ -2,29 +2,38 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "# **Built in Functions**"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "# **bool()**\r\n",
     "Valores vazios ou zeros são considerado False, do contrário são considerados True (Truth Value Testing).\r\n",
     "\r\n",
     "\"Truth Value Testing\". Isto é, decidir quando um valor é considerado True ou False"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "source": [
+    "print(bool(0))\r\n",
+    "print(bool(\"\"))\r\n",
+    "print(bool(None))\r\n",
+    "print(bool(1))\r\n",
+    "print(bool(-100))\r\n",
+    "print(bool(13.5))\r\n",
+    "print(bool(\"teste\"))\r\n",
+    "print(bool(True))"
+   ],
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
       "False\n",
       "False\n",
@@ -37,55 +46,56 @@
      ]
     }
    ],
-   "source": [
-    "print(bool(0))\n",
-    "print(bool(\"\"))\n",
-    "print(bool(None))\n",
-    "print(bool(1))\n",
-    "print(bool(-100))\n",
-    "print(bool(13.5))\n",
-    "print(bool(\"teste\"))\n",
-    "print(bool(True))"
-   ]
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "# **f'' / .format()**"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "source": [
+    "# antes da versão 3.6 \r\n",
+    "a = ('Hello World!')\r\n",
+    "print('----> {} <----'.format(a))\r\n",
+    "\r\n",
+    "# ou f''\r\n",
+    "print(f'----> {a} <----')"
+   ],
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
       "----> Hello World! <----\n",
       "----> Hello World! <----\n"
      ]
     }
    ],
-   "source": [
-    "# antes da versão 3.6 \n",
-    "a = ('Hello World!')\n",
-    "print('----> {} <----'.format(a))\n",
-    "\n",
-    "# ou f''\n",
-    "print(f'----> {a} <----')"
-   ]
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "source": [
+    "nome = 'José'\r\n",
+    "idade = 23\r\n",
+    "salario = 987.30\r\n",
+    "print(f'O {nome} tem {idade} anos e ganha R${salario:.2f}.') #Python 3.6+\r\n",
+    "print(f'O {nome:-^20} tem {idade} anos e ganha R${salario:.2f}.') #Python 3.6+\r\n",
+    "print(f'O {nome:-<20} tem {idade} anos e ganha R${salario:.2f}.') #Python 3.6+\r\n",
+    "print(f'O {nome:->20} tem {idade} anos e ganha R${salario:.2f}.') #Python 3.6+\r\n",
+    "print('O {} tem {} anos e ganha R${:.2f}.'.format(nome, idade, salario)) #Python 3\r\n",
+    "print('O %s tem %d anos.' % (nome, idade)) #Python 2"
+   ],
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
       "O José tem 23 anos e ganha R$987.30.\n",
       "O --------José-------- tem 23 anos e ganha R$987.30.\n",
@@ -96,26 +106,31 @@
      ]
     }
    ],
-   "source": [
-    "nome = 'José'\n",
-    "idade = 23\n",
-    "salario = 987.30\n",
-    "print(f'O {nome} tem {idade} anos e ganha R${salario:.2f}.') #Python 3.6+\n",
-    "print(f'O {nome:-^20} tem {idade} anos e ganha R${salario:.2f}.') #Python 3.6+\n",
-    "print(f'O {nome:-<20} tem {idade} anos e ganha R${salario:.2f}.') #Python 3.6+\n",
-    "print(f'O {nome:->20} tem {idade} anos e ganha R${salario:.2f}.') #Python 3.6+\n",
-    "print('O {} tem {} anos e ganha R${:.2f}.'.format(nome, idade, salario)) #Python 3\n",
-    "print('O %s tem %d anos.' % (nome, idade)) #Python 2"
-   ]
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 13,
-   "metadata": {},
+   "source": [
+    "# formatação de traços + casas decimais\r\n",
+    "vlr = 120\r\n",
+    "vlr2 = 10.1\r\n",
+    "print(f'{vlr:->20.2f}')\r\n",
+    "print(f'{vlr2:-^20.2f}')\r\n",
+    "print(f'R${vlr:5.2f}')\r\n",
+    "print(f'R${vlr:6.2f}')\r\n",
+    "print(f'R${vlr:7.2f}')\r\n",
+    "print(f'R${vlr:8.2f}')\r\n",
+    "print(f'R${vlr:08.2f}')\r\n",
+    "print(f'R${vlr:010.4f}') # f para float\r\n",
+    "print(f'R${vlr:010d}')# d para inteiros\r\n",
+    "print(f'R${vlr:04d}')\r\n",
+    "print(f'R${vlr:4d}')"
+   ],
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
       "--------------120.00\n",
       "-------10.10--------\n",
@@ -131,31 +146,24 @@
      ]
     }
    ],
-   "source": [
-    "# formatação de traços + casas decimais\n",
-    "vlr = 120\n",
-    "vlr2 = 10.1\n",
-    "print(f'{vlr:->20.2f}')\n",
-    "print(f'{vlr2:-^20.2f}')\n",
-    "print(f'R${vlr:5.2f}')\n",
-    "print(f'R${vlr:6.2f}')\n",
-    "print(f'R${vlr:7.2f}')\n",
-    "print(f'R${vlr:8.2f}')\n",
-    "print(f'R${vlr:08.2f}')\n",
-    "print(f'R${vlr:010.4f}') # f para float\n",
-    "print(f'R${vlr:010d}')# d para inteiros\n",
-    "print(f'R${vlr:04d}')\n",
-    "print(f'R${vlr:4d}')"
-   ]
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "source": [
+    "n1, n2, n3, n4 = 100, 1, 00.758, 15.77\r\n",
+    "\r\n",
+    "print(f'n1 = {n1:6}\\nn1 = {n1:06}') # total de casas = 6 com opção de colocar ou não zero\r\n",
+    "print(f'n2 = {n2:06}')\r\n",
+    "print(f'n2 = {n2: 6}')\r\n",
+    "print(f'n3 = {n3:06.3f}') # variavel + ':' + total de casas decimais + '.' + casas decimais a direita da ','\r\n",
+    "print(f'n4 = {n4:06.3f} ou {n4:.2f}')"
+   ],
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
       "n1 =    100\n",
       "n1 = 000100\n",
@@ -166,24 +174,23 @@
      ]
     }
    ],
-   "source": [
-    "n1, n2, n3, n4 = 100, 1, 00.758, 15.77\n",
-    "\n",
-    "print(f'n1 = {n1:6}\\nn1 = {n1:06}') # total de casas = 6 com opção de colocar ou não zero\n",
-    "print(f'n2 = {n2:06}')\n",
-    "print(f'n2 = {n2: 6}')\n",
-    "print(f'n3 = {n3:06.3f}') # variavel + ':' + total de casas decimais + '.' + casas decimais a direita da ','\n",
-    "print(f'n4 = {n4:06.3f} ou {n4:.2f}')"
-   ]
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "source": [
+    "# formatação com tab \\t\r\n",
+    "for c in range(0,5):\r\n",
+    "    print(f'O {c}º valor recebido é \\t R$1000,00')\r\n",
+    "    print('Agora sem o tab')\r\n",
+    "    print(f'O {c}º valor recebido é R$1000,00')\r\n",
+    "    print('-' * 35)"
+   ],
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
       "O 0º valor recebido é \t R$1000,00\n",
       "Agora sem o tab\n",
@@ -208,45 +215,37 @@
      ]
     }
    ],
-   "source": [
-    "# formatação com tab \\t\n",
-    "for c in range(0,5):\n",
-    "    print(f'O {c}º valor recebido é \\t R$1000,00')\n",
-    "    print('Agora sem o tab')\n",
-    "    print(f'O {c}º valor recebido é R$1000,00')\n",
-    "    print('-' * 35)"
-   ]
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "# **.find() .rfind**"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "source": [
+    "frase = '  Curso em Vídeo Python  '\r\n",
+    "print(frase.find('Curso'))\r\n",
+    "print('A letra \"o\" aparece a ultima vez na posição {}.'.format(frase.lower().rfind('o')+1))"
+   ],
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
       "2\n",
       "A letra \"o\" aparece a ultima vez na posição 22.\n"
      ]
     }
    ],
-   "source": [
-    "frase = '  Curso em Vídeo Python  '\n",
-    "print(frase.find('Curso'))\n",
-    "print('A letra \"o\" aparece a ultima vez na posição {}.'.format(frase.lower().rfind('o')+1))"
-   ]
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "# **print()**\r\n",
     "value é o valor que queremos imprimir, as reticências indicam que a função pode receber mais de um valor, basta separá-los por vírgula.\r\n",
@@ -254,23 +253,32 @@
     "sep é o separador entre os valores, por padrão o separador é um espaço em branco.\r\n",
     "\r\n",
     "end é o que acontecerá ao final da função, por padrão há uma quebra de linha, uma nova linha (\\n). "
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "## fomatando o print"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "source": [
+    "nome = 'Livio Alvarenga'\r\n",
+    "print(f'Prazer em te conhecer\\n{nome}!') #\\n executa um enter\r\n",
+    "print(f'Prazer em te conhecer {nome:20}!')\r\n",
+    "print(f'Prazer em te conhecer {nome:>20}!')\r\n",
+    "print(f'Prazer em te conhecer {nome:<20}!')\r\n",
+    "print(f'Prazer em te conhecer {nome:^20}!')\r\n",
+    "print(f'Prazer em te conhecer {nome:=^21}!')"
+   ],
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
       "Prazer em te conhecer\n",
       "Livio Alvarenga!\n",
@@ -282,43 +290,44 @@
      ]
     }
    ],
-   "source": [
-    "nome = 'Livio Alvarenga'\n",
-    "print(f'Prazer em te conhecer\\n{nome}!') #\\n executa um enter\n",
-    "print(f'Prazer em te conhecer {nome:20}!')\n",
-    "print(f'Prazer em te conhecer {nome:>20}!')\n",
-    "print(f'Prazer em te conhecer {nome:<20}!')\n",
-    "print(f'Prazer em te conhecer {nome:^20}!')\n",
-    "print(f'Prazer em te conhecer {nome:=^21}!')"
-   ]
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "source": [
+    "print(f'{\"FIM DO PROGRAMA\":-^30}')\r\n",
+    "print(f'{\"FIM DO PROGRAMA\":^30}')"
+   ],
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
       "-------FIM DO PROGRAMA--------\n",
       "       FIM DO PROGRAMA        \n"
      ]
     }
    ],
-   "source": [
-    "print(f'{\"FIM DO PROGRAMA\":-^30}')\n",
-    "print(f'{\"FIM DO PROGRAMA\":^30}')"
-   ]
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "source": [
+    "frase = '  Curso em Vídeo Python  '\r\n",
+    "print(frase[3])\r\n",
+    "print(frase[:3])\r\n",
+    "print(frase[3:])\r\n",
+    "print(frase[0:10:2])\r\n",
+    "print(\"\"\"imprimindo um texto longo!!! imprimindo um texto longo!!!\r\n",
+    "imprimindo um texto longo!!! imprimindo um texto longo!!!\r\n",
+    "imprimindo um texto longo!!! imprimindo um texto longo!!!\"\"\")"
+   ],
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
       "u\n",
       "  C\n",
@@ -330,86 +339,65 @@
      ]
     }
    ],
-   "source": [
-    "frase = '  Curso em Vídeo Python  '\n",
-    "print(frase[3])\n",
-    "print(frase[:3])\n",
-    "print(frase[3:])\n",
-    "print(frase[0:10:2])\n",
-    "print(\"\"\"imprimindo um texto longo!!! imprimindo um texto longo!!!\n",
-    "imprimindo um texto longo!!! imprimindo um texto longo!!!\n",
-    "imprimindo um texto longo!!! imprimindo um texto longo!!!\"\"\")"
-   ]
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "## print sep e end"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {},
+   "source": [
+    "# print com end\r\n",
+    "t1 = 't1'\r\n",
+    "t2 = 't2'\r\n",
+    "t3 = 't3'\r\n",
+    "print('{} --> {}'.format(t1, t2), end='')\r\n",
+    "print(f' --> {t3}', end='')\r\n",
+    "print(' --> FIM')"
+   ],
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
       "t1 --> t2 --> t3 --> FIM\n"
      ]
     }
    ],
-   "source": [
-    "# print com end\n",
-    "t1 = 't1'\n",
-    "t2 = 't2'\n",
-    "t3 = 't3'\n",
-    "print('{} --> {}'.format(t1, t2), end='')\n",
-    "print(f' --> {t3}', end='')\n",
-    "print(' --> FIM')"
-   ]
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {},
+   "source": [
+    "print(\"Brasil\", \"ganhou\", 5, \"titulos mundiais\", sep=\"-\")"
+   ],
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
       "Brasil-ganhou-5-titulos mundiais\n"
      ]
     }
    ],
-   "source": [
-    "print(\"Brasil\", \"ganhou\", 5, \"titulos mundiais\", sep=\"-\")"
-   ]
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "## Imprimindo com pprint( )"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'Cidade': 'Belo Horizonte',\n",
-      " 'Idade': 40,\n",
-      " 'nome': 'Livio'}\n"
-     ]
-    }
-   ],
    "source": [
     "from pprint import pprint\r\n",
     "\r\n",
@@ -418,35 +406,102 @@
     "cliente = {'nome': 'Livio', 'Idade': 40, 'Cidade': 'Belo Horizonte'}\r\n",
     "\r\n",
     "pprint(cliente, width=40)"
-   ]
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "{'Cidade': 'Belo Horizonte',\n",
+      " 'Idade': 40,\n",
+      " 'nome': 'Livio'}\n"
+     ]
+    }
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "# **round()**"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 14,
-   "metadata": {},
+   "source": [
+    "# Retorna o valor com arredondamento\r\n",
+    "round(3.14151922,2)"
+   ],
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "3.14"
       ]
      },
-     "execution_count": 14,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 14
     }
    ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
    "source": [
-    "# Retorna o valor com arredondamento\n",
-    "round(3.14151922,2)"
-   ]
+    "# os.path.isdir\r\n",
+    "\r\n",
+    "Este método vai nos retornar um booleano, True ou False, que vai dizer se o diretório existe ou não"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "source": [
+    "from os.path import isdir\r\n",
+    "\r\n",
+    "diretorio = \"c:\\\\\"\r\n",
+    "\r\n",
+    "if isdir(diretorio):\r\n",
+    "    print(f\"O diretório {diretorio} existe!\")\r\n",
+    "else:\r\n",
+    "    print(\"O diretório não existe!\")"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "O diretório c:\\ existe!\n"
+     ]
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "source": [
+    "diretorio = \"xx:\\\\\"\r\n",
+    "\r\n",
+    "if isdir(diretorio):\r\n",
+    "    print(f\"O diretório {diretorio} existe!\")\r\n",
+    "else:\r\n",
+    "    print(\"O diretório não existe!\")"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "O diretório não existe!\n"
+     ]
+    }
+   ],
+   "metadata": {}
   }
  ],
  "metadata": {
@@ -454,8 +509,8 @@
    "hash": "325cb660cce599eef17833f9bb0afcb0e3dbe3e8605c570c8e00eb36d04c5df3"
   },
   "kernelspec": {
-   "display_name": "Python 3.9.5 64-bit ('venv': venv)",
-   "name": "python3"
+   "name": "python3",
+   "display_name": "Python 3.9.5 64-bit ('venv': venv)"
   },
   "language_info": {
    "codemirror_mode": {
